poprawnie bledow i dodanie API
