# api/swagger/swagger.yaml
@@ -12,7 +12,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /shops:
+  /shop:
     x-swagger-router-controller: shop_controller
     get:
       description: Shows list of shops
@@ -57,7 +57,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
             
-  /shops/{id}:
+  /shop/{id}:
     x-swagger-router-controller: shop_controller
     get:
       description: Shows a shop
@@ -165,7 +165,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   
-  /shops/{id}/{productID}:  
+  /shop/{id}/{productID}:  
     x-swagger-router-controller: management_controller
     get:
       description: show product
@@ -257,14 +257,26 @@ paths:
     x-swagger-pipe: swagger_raw
 definitions:
   ShopsResponse:
-    type: array
-    items:
-      $ref: "#/definitions/ShopResponse"
-  
+    properties:
+      shop:
+        type: array
+        items:
+            type: object
+            properties:
+              id:
+                type: string
+              name:
+                type: string
+              description:
+                type: string
+              city:
+                type: string
+              address:
+                type: string
+      
   ShopResponse:
     required:
       - id
-      - name
     properties:
       id: 
         type: string
@@ -279,7 +291,6 @@ definitions:
       products:
         type: array
         items:
-          #$ref "#/definitions/ProductResponse"
           type: object
           properties:
             id:
@@ -296,7 +307,7 @@ definitions:
   ProductResponse:
     required:
       - id
-      - name
+      - idShop
     properties:
       id:
         type: string
@@ -308,6 +319,8 @@ definitions:
         type: number
       count: 
         type: number
+      idShop:
+        type: string
                
   ErrorResponse:
     required:
